[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "energy_consumption_optimisation"
version = "0.0.1"
description = "An intelligent energy management system for smart homes and buildings, leveraging IoT data and machine learning to optimise energy consumption and enhance sustainability."
authors = [
  { name = "Ibrahim Shore" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["energy_consumption_optimisation"]
force_sort_within_sections = true
